--- a/src/Updater/Updater.csproj
+++ b/src/Updater/Updater.csproj
@@ -23,6 +23,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="LibGit2Sharp" Version="0.27.2" />
     <PackageReference Include="WPF-UI" Version="3.0.0-preview.6" />
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="8.0.0-rc.1.23419.4" />
     <PackageReference Include="CommunityToolkit.Mvvm" Version="8.2.1 " />
