[新增]打包软件

--- a/src/Updater/Updater.csproj
+++ b/src/Updater/Updater.csproj
@@ -2,12 +2,14 @@
 
   <PropertyGroup>
     <OutputType>WinExe</OutputType>
-    <TargetFramework>net7.0-windows</TargetFramework>
+    <TargetFramework>net6.0-windows</TargetFramework>
     <ApplicationManifest>app.manifest</ApplicationManifest>
     <ApplicationIcon>Assets\app-light.ico</ApplicationIcon>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <UseWPF>true</UseWPF>
+    <LangVersion>default</LangVersion>
+    <AssemblyName>自动更新工具</AssemblyName>
   </PropertyGroup>
 
   <ItemGroup>
