--- a/src/Updater/Updater.csproj
+++ b/src/Updater/Updater.csproj
@@ -10,6 +10,7 @@
     <UseWPF>true</UseWPF>
     <LangVersion>default</LangVersion>
     <AssemblyName>自动更新工具</AssemblyName>
+    <UseWindowsForms>True</UseWindowsForms>
   </PropertyGroup>
 
   <ItemGroup>
@@ -26,6 +27,7 @@
 
   <ItemGroup>
     <PackageReference Include="LibGit2Sharp" Version="0.27.2" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="WPF-UI" Version="3.0.0-preview.6" />
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="8.0.0-rc.1.23419.4" />
     <PackageReference Include="CommunityToolkit.Mvvm" Version="8.2.1 " />
